--- a/vignettes/occUncertain-vigentte.Rmd
+++ b/vignettes/occUncertain-vigentte.Rmd
@@ -20,26 +20,24 @@ knitr::opts_chunk$set(
 
 This vignette goes through the use of uncertainty meassures of species occurrence records in "occUncertainty: An R package for addressing uncertainty of species occurrence in species distribution models". Here we demostrate how *occUncertain* can be used to transform uncertainty meassures from meters to decimal degrees, how many repetitions of the repetitions of the mutating algorithm are necessary to accurately achieve occurrence records, and we examine whether there is a notable variability in the quantification of the extent area that encompass the inferred or projected sites of occurrence of a species, and the area within the extent polygon they occupy. 
 
-##Load the occUncertain R package
+#1 Load the occUncertain R package
 Here we load the R package from source code. This source code will soon be submitted to CRAN, so that this package can be loaded using standard package management methods.
 
 ```{r}
 library(occUncertain)
 ```
 
-##Example dataset
+##1.1 Example dataset
 
-To demonstrate the use of the package occUncertain we used a set of 229 verified, georeferenced occurrence records for the margay (Leopardus weidii) a small wild cat native to Central and South America. These occurrences dataset are from the Global Biodiversity Information Facility  (GBIF) and are included as part of the occUncertain package.
+To demonstrate the use of the package occUncertain we used a set of 229 verified, georeferenced occurrence records for the margay (*Leopardus weidii*) a small wild cat native to Central and South America. These occurrences dataset are from the Global Biodiversity Information Facility  (GBIF) and are included as part of the occUncertain package.
 
 ##Load dataset 
 
 ```{r dataset, eval = FALSE}
-library(readr)
-Leopardus_wiedii_gbif <- read_csv("C:/Users/Samuel/changalfsam@ Google Drive/Samuel Chang - M.Sc Project/occUncertain/man/Leopardus_wiedii_gbif.csv")
-
+data(Leopardus_wiedii_gbif)
 ```
 
-Lets take a look into the data set, it is required to have at least three columns: latitude, longitude and the coordinate uncertainty. In this case the uncertainty is expresed in meters and our coodinates are in UTM /WSG84. 
+Lets take a look into the data set, it is required to have at least three columns: latitude, longitude and the coordinate uncertainty. In this case the uncertainty is expresed in meters and our coodinates are in WSG84. 
 
 ```{r head}
 head(Leopardus_wiedii_gbif)
@@ -67,9 +65,9 @@ head(Leopardus_wiedii_uncertainty_naNA)
 
 ```
 
+<!---
 # Set the projection of the original data, and then use spTransform the coordinates into UTM 
 
----
 proj4string(Leopardus_wiedii) <- CRS("+proj=utm + ellps=WGS84") # This sets the projection of the data, assuming that you are using the WGS84 ellipsoid (if you do not know for sure, it is a safe assumption)
 
 data <-spTransform(data,CRS="+proj=utm +zone=27 +datum=WGS84") # Use whatever UTM zone you need.
@@ -77,12 +75,11 @@ crs(data)
 
 data <- as.data.frame(coordinates(data)) # This converts the SpatialPoints object back into a data frame
 data <- data
----
+--->
 
 To utilize the function 
 
 ## Randomize
-
 
 For the rest of the example we will use the na_action = "NA as mean"
 
@@ -107,19 +104,89 @@ after we generate the new random ocurences cal in any packages we want to use fo
 plot(Leopardus_wiedii$longitude, Leopardus_wiedii$latitude)
 points(Leopardus_wiedii_random$lon_random, Leopardus_wiedii_random$lat_random, col = "red", pch = 21)
 ```
+----
 
+#3 Computing EOO 
 
-## AOO and EOO
-```{r random LAT and LONG with uncertainty coordinates}
+The Extent of Occurrence (EOO) is the area contained within the shortest continuous imaginary boundary which can be drawn to encompass all the known, inferred or projected sites of present occurrence of a taxon, excluding cases of vagrancy. (IUCN 2012)
 
-# Details
-# (AOO) is calculated as the area of all known or predicted cells for the species. The resolution will be 2x2km as required by IUCN.
+#3.1 Input file 
 
-#Area of occupancy - the area occupied by a taxon within its extent of occurrence. The measure reflects the fact that a taxon will not usually occur throughout the area of its extent of occurrence, which may contain unsuitable or unoccupied habitats.
+Is is required a data frame with at least three different columns: 
 
+```{r file}
+library(ConR)
 
-#  Value
-#A single value in km2 or a vector with lower confidence limit, consensus and upper confidence limit (probabilities 0.975, 0.5 and 0.025 respectively).
+Leopardus_wiedii_random$tax <- c('Leopardus_weidii')
+
+head(Leopardus_wiedii_random)
+```
+1. lat_random: Latitude in decimal degrees
+2. lon_random: Longitude in decimal degrees
+3. Name of taxa
+
+```{r EOO}
+L_weidii_EOO <- EOO.computing(Leopardus_wiedii_random)
+
+L_weidii_EOO <- EOO.computing(Leopardus_wiedii_random, export_shp = T)
+
+plot(L_weidii_EOO$spatial.polygon_1, col = "grey") #need finite 'xlim' values
+
 ```
 
+3.2 Cropping spatial polygon for excluding unsuitable area
+
+You may want to exclude areas that are not suitable for your species when computing EOO. This is feasible using the logical argument exclude.area which will crop areas defined by the shapefile you provide with the argument country_map. Note that it is mandatory to provide a shapefile for country_map if exclude.area is TRUE. 
+
+```{r excluding unsuitable area}
+## Use this to exclude ocean area
+#ConR provides the land world cover. Ocean cover is therefore excluded when computing EOO.
+EOO.computing(Leopardus_wiedii_random, exclude.area = T, country_map = land)
+
+#Overlapping hull convex with the ocean cover:
+EOO.computing(Leopardus_wiedii_random, exclude.area = F, country_map = land)
+```
+
+
+#4 Computing AOO 
+(AOO) is calculatlaed as the area of all known or predicted cells for the species. The resolution will be 2x2km as required by IUCN.
+
+Area of occupancy (AOO), is the area occupied by a taxon within its extent of occurrence. The measure reflects the fact that a taxon will not usually occur throughout the area of its extent of occurrence, which may contain unsuitable or unoccupied habitats.
+
+```{r AOO}
+
+L_weidii_AOO <- AOO.computing(Leopardus_wiedii_random)
+L_weidii_AOO
+```
+
+#Runing IUCN.eval function 
+
+```{r IUCN}
+
+IUCN.eval(Leopardus_wiedii_random)
+```
+
+## Next steps
+
+Use a for loop to repeat the randomizing points, then calc EOO and AOO, 10 times.
+Save each EOO and AOO result, so you should have 10 of each. 
+
+```{r}
+rand_EOOs <- c()
+rand_AOOs <- c()
+
+for(x in 1:10){
+  # Get random points
+  
+  # Calculate EOO
+  
+  # Add new EOO value to rand_EOOs
+  
+  # Calcualte AOO
+  
+  # Add new AOO value to rand_AOOs
+  
+}
+
+```
 
