Made small change to vignette

--- a/vignettes/occUncertain-vigentte.Rmd
+++ b/vignettes/occUncertain-vigentte.Rmd
@@ -190,6 +190,7 @@ Use a for loop to repeat the randomizing points, then calc EOO and AOO, 10 times
 Save each EOO and AOO result, so you should have 10 of each. 
 
 ```{r}
+# Initiate vectors
 rand_EOOs <- c()
 rand_AOOs <- c()
 
