--- a/vignettes/occUncertain-vigentte.Rmd
+++ b/vignettes/occUncertain-vigentte.Rmd
@@ -16,7 +16,6 @@ knitr::opts_chunk$set(
 )
 ```
 
-
 # 1. Introduction
 
 This vignette goes through the use of uncertainty meassures of species occurrence records in "occUncertainty: An R package for addressing uncertainty of species occurrence in species distribution models". Here we demostrate how *occUncertain* can be used to transform uncertainty meassures from meters to decimal degrees, how many repetitions of the repetitions of the mutating algorithm are necessary to accurately achieve occurrence records, and we examine whether there is a notable variability in the quantification of the extent area that encompass the inferred or projected sites of occurrence of a species, and the area within the extent polygon they occupy. 
@@ -54,30 +53,33 @@ The function **meters_to_decdeg** transforms the units into radian degrees for e
 In case of having an NA values for the uncertaity, the function includes a parameter *na_action*; which enacts distance options for NA values. The options are "NA as zero" , "NA as mean", and "NA as NA".
 
 ```{r uncertainty from meter to radian degrees NA as 0}
-Leopardus_wiedii_uncertainty_naZero <- meters_to_decdeg(Leopardus_wiedii_gbif, distance = "coordinateUncertaintyInMeters", na_action = "NA as 0")
+Leopardus_wiedii_uncertainty_naZero <-
+  meters_to_decdeg(Leopardus_wiedii_gbif,
+    distance = "coordinateUncertaintyInMeters",
+    na_action = "NA as 0")
 
 head(Leopardus_wiedii_uncertainty_naZero)
+```
+```{r uncertainty from meter to radian degrees NA as NA}
+Leopardus_wiedii_uncertainty_naNA <-
+  meters_to_decdeg(Leopardus_wiedii_gbif,
+    distance = "coordinateUncertaintyInMeters",
+    na_action = "NA as NA")
 
-Leopardus_wiedii_uncertainty_naZero <- cbind(Leopardus_wiedii_gbif, Leopardus_wiedii_uncertainty_naZero)
+head(Leopardus_wiedii_uncertainty_naNA)
 ```
 
 ```{r uncertainty from meter to radian degrees NA as mean}
-Leopardus_wiedii_uncertainty_naMean <- meters_to_decdeg(Leopardus_wiedii_gbif, distance = "coordinateUncertaintyInMeters", na_action = "NA as mean")
+Leopardus_wiedii_uncertainty_naMean <-
+  meters_to_decdeg(Leopardus_wiedii_gbif,
+    distance = "coordinateUncertaintyInMeters",
+    na_action = "NA as mean")
+
 head(Leopardus_wiedii_uncertainty_naMean)
 
-Leopardus_wiedii_uncertainty_naMean <- cbind(Leopardus_wiedii_gbif, Leopardus_wiedii_uncertainty_naMean)
-
 ```
 
-```{r uncertainty from meter to radian degrees NA as NA}
-Leopardus_wiedii_uncertainty_naNA <- meters_to_decdeg(Leopardus_wiedii_gbif, distance = "coordinateUncertaintyInMeters", na_action = "NA as NA")
-head(Leopardus_wiedii_uncertainty_naNA)
-
-Leopardus_wiedii_uncertainty_naNA <- cbind(Leopardus_wiedii_gbif, Leopardus_wiedii_uncertainty_naNA)
-
-```
-
-For the rest of the example we will use the na_action = "NA as mean"
+The rest of the vignette will use the na_action = "NA as mean"
 
 # 5. generate_occ_uncertain function
 
@@ -87,16 +89,36 @@ The function **generate_occ_uncertain** uses uncertain values to generate random
 3. Latitude uncertainty in decimal degrees.
 4. Longitude uncertainty in decimal degrees.
 
+```{r NA as mean}
+#combine orginl dataset with radian 
+Leopardus_wiedii_uncertainty_naMean <-
+  cbind(Leopardus_wiedii_gbif, Leopardus_wiedii_uncertainty_naMean)
+```
+
 Lets generate random occurrence latitude and longitude coordinates with uncertain values. 
 ```{r generate}
-Leopardus_wiedii_random <- generate_occ_uncertain(Leopardus_wiedii_uncertainty_naMean, lat_col = "latitude", lon_col = "longitude", lat_uncertainty = "lat_uncertainty", lon_uncertainty = "lon_uncertainty", taxa_col = "species")
+Leopardus_wiedii_random <-
+  generate_occ_uncertain(
+    Leopardus_wiedii_uncertainty_naMean,
+    lat_col = "latitude",
+    lon_col = "longitude",
+    lat_uncertainty = "lat_uncertainty",
+    lon_uncertainty = "lon_uncertainty",
+    taxa_col = "species"
+  )
 
 head(Leopardus_wiedii_random)
 ```
+
 ## Lets visualize 
 ```{r eval=FALSE, include=FALSE}
 plot(Leopardus_wiedii$longitude, Leopardus_wiedii$latitude)
-points(Leopardus_wiedii_random$lon_random, Leopardus_wiedii_random$lat_random, col = "red", pch = 21)
+points(
+  Leopardus_wiedii_random$lon_random,
+  Leopardus_wiedii_random$lat_random,
+  col = "red",
+  pch = 21
+)
 ```
 ----
 
@@ -113,53 +135,34 @@ head(Leopardus_wiedii_random)
 2. lon_random: Longitude in decimal degrees
 3. Name of taxa
 
-
-# 6.2. Computing EOO 
-
+## 6.2. Computing EOO 
 The Extent of Occurrence (EOO) is the area contained within the shortest continuous imaginary boundary which can be drawn to encompass all the known, inferred or projected sites of present occurrence of a taxon, excluding cases of vagrancy. (IUCN 2012)
 
-```{r EOO}
-L_weidii_EOO <- EOO.computing(Leopardus_wiedii_random)
-
-L_weidii_EOO <- EOO.computing(Leopardus_wiedii_random, export_shp = T)
-
-plot(L_weidii_EOO$spatial.polygon_1, col = "grey") #need finite 'xlim' values
-
-```
-
-### 6.2.1. Cropping spatial polygon for excluding unsuitable area
-
 You may want to exclude areas that are not suitable for your species when computing EOO. This is feasible using the logical argument exclude.area which will crop areas defined by the shapefile you provide with the argument country_map. Note that it is mandatory to provide a shapefile for country_map if exclude.area is TRUE. 
-```{r excluding unsuitable area}
-## Use this to exclude ocean area
-#ConR provides the land world cover. Ocean cover is therefore excluded when computing EOO.
-EOO.computing(Leopardus_wiedii_random, exclude.area = T, country_map = land)
-
-#Overlapping hull convex with the ocean cover:
-EOO.computing(Leopardus_wiedii_random, exclude.area = F, country_map = land)
+```{r EOO}
+L_weidii_EOO <-
+  EOO.computing(
+    Leopardus_wiedii_random,
+    exclude.area = T,
+    country_map = land,
+    write_results = F
+  )
 ```
-
 
 ## 6.3 Computing AOO 
-(AOO) is calculatlaed as the area of all known or predicted cells for the species. The resolution will be 2x2km as required by IUCN.
-
-Area of occupancy (AOO), is the area occupied by a taxon within its extent of occurrence. The measure reflects the fact that a taxon will not usually occur throughout the area of its extent of occurrence, which may contain unsuitable or unoccupied habitats.
-
+Area of occupancy (AOO), is the area occupied by a taxon within its extent of occurrence. The measure reflects the fact that a taxon will not usually occur throughout the area of its extent of occurrence, which may contain unsuitable or unoccupied habitats. Metric calculatlaed as the area of all known or predicted cells for the species. The resolution will be 2x2km as required by IUCN.
 ```{r AOO}
 L_weidii_AOO <- AOO.computing(Leopardus_wiedii_random)
-L_weidii_AOO
 ```
+
 ## 6.4 Runing IUCN.eval function 
 ```{r IUCN}
 IUCN.eval(Leopardus_wiedii_random)
 ```
 
 # 7 Next steps
-
-The function {*random_geo_range*} Use a for loop to repeat the randomizing points, then calc EOO and AOO, 10 times.
-Save each EOO and AOO result, so you should have 10 of each. 
+The function {*random_geo_range*} Use a for loop to repeat the randomizing points, then calculates EOO and AOO. Save each EOO and AOO result.
 
 ```{r}
-Leopardus_weidii_random_geo_range <- random_geo_range(10, Leopardus_wiedii)
-
+Leopardus_weidii_random_geo_range <- random_geo_range(10, Leopardus_wiedii_uncertainty_naMean)
 ```
