--- a/vignettes/occUncertain-vigentte.Rmd
+++ b/vignettes/occUncertain-vigentte.Rmd
@@ -16,90 +16,133 @@ knitr::opts_chunk$set(
 )
 ```
 
+```{r setup, echo=F, include = FALSE}
+library(occUncertain)
+data(Leopardus_wiedii_gbif)
+# load("../data/Leopardus_wiedii_gbif.rda")
+Leopardus_wiedii_gbif <- Leopardus_wiedii_gbif
+```
+
+
+
+*****
+*****
 # 1. Introduction
 
 This vignette goes through the use of uncertainty meassures of species occurrence records in "occUncertainty: An R package for addressing uncertainty of species occurrence in species distribution models". Here we demostrate how *occUncertain* can be used to transform uncertainty meassures from meters to decimal degrees, how many repetitions of the repetitions of the mutating algorithm are necessary to accurately achieve occurrence records, and we examine whether there is a notable variability in the quantification of the extent area that encompass the inferred or projected sites of occurrence of a species, and the area within the extent polygon they occupy. 
 
+## Input file
+To demonstrate the use of the package occUncertain we used a set of 229 verified, georeferenced occurrence records for the margay (*Leopardus weidii*) a small wild cat native to Central and South America. These occurrences dataset are from the Global Biodiversity Information Facility (GBIF) and are included as part of the occUncertain package.
 
-# 2. Load the occUncertain R package
-Here we load the R package from source code. This source code will soon be submitted to CRAN, so that this package can be loaded using standard package management methods.
+The data set requires to have at least four columns: 
 
-```{r}
-library(occUncertain)
+```{r TableData,include=TRUE, echo=FALSE}
+Leopardus_wiedii_gbif <- dplyr::select(Leopardus_wiedii_gbif, latitude, longitude, coordinateUncertaintyInMeters, species)
+knitr::kable(head(Leopardus_wiedii_gbif))
 ```
 
-
-# 3. Example dataset
-
-To demonstrate the use of the package occUncertain we used a set of 229 verified, georeferenced occurrence records for the margay (*Leopardus weidii*) a small wild cat native to Central and South America. These occurrences dataset are from the Global Biodiversity Information Facility  (GBIF) and are included as part of the occUncertain package.
-
-## 3.1 Load dataset 
-```{r dataset, eval = FALSE}
-data(Leopardus_wiedii_gbif)
-```
-
-Lets take a look into the data set, it is required to have at least three columns: 
 1. Latitude in decimal degrees
-2. Longitude in decimal degrees
-3. Coordinate uncertainty in meters.
+1. Longitude in decimal degrees
+1. Coordinate uncertainty in meters.
+1. Name of taxa
 
-```{r head}
-head(Leopardus_wiedii_gbif)
+# 2. `meters_to_decdeg` function
+
+The function `meters_to_decdeg` transforms the units into radian degrees for each occurence point. 
+
+***Note 1*: Is impotant to consider the fact that as one moves away from the equator towards a pole, one degree of longitude is multiplied by the cosine of the latitude, decreasing the distance, approaching zero at the pole.  
+
+The function allows interpretation of NA uncertainty values through the conditional parameter `na_action`. 
+
+The options are:
+1. NA as zero, assigns zero to all NA values,
 ```
-# 4. meters_to_decdeg function
+L_wiedii_uncertainty_naZero <-
+  meters_to_decdeg(occs_df = Leopardus_wiedii_gbif,
+    lat_col = "latitude",
+    lon_col = "longitude",
+    distance = "coordinateUncertaintyInMeters",
+    na_action = "NA as 0")
+```
 
-The function **meters_to_decdeg** transforms the units into radian degrees for each occurence point. Its impotant to consider the fact that as one moves away from the equator towards a pole, one degree of longitude is multiplied by the cosine of the latitude, decreasing the distance, approaching zero at the pole.  
-
-In case of having an NA values for the uncertaity, the function includes a parameter *na_action*; which enacts distance options for NA values. The options are "NA as zero" , "NA as mean", and "NA as NA".
-
-```{r uncertainty from meter to radian degrees NA as 0}
-Leopardus_wiedii_uncertainty_naZero <-
-  meters_to_decdeg(Leopardus_wiedii_gbif,
+```{r uncertainty from meter to radian degrees NA as 0, echo=FALSE}
+L_wiedii_uncertainty_naZero <-
+  meters_to_decdeg(occs_df = Leopardus_wiedii_gbif,
+    lat_col = "latitude",
+    lon_col = "longitude",
     distance = "coordinateUncertaintyInMeters",
     na_action = "NA as 0")
 
-head(Leopardus_wiedii_uncertainty_naZero)
+knitr::kable(head(L_wiedii_uncertainty_naZero))
 ```
-```{r uncertainty from meter to radian degrees NA as NA}
-Leopardus_wiedii_uncertainty_naNA <-
-  meters_to_decdeg(Leopardus_wiedii_gbif,
+
+2. NA as NA, leaves NA values as NA, and 
+```
+L_wiedii_uncertainty_naNA <-
+  meters_to_decdeg(occs_df = Leopardus_wiedii_gbif,
+    distance = "coordinateUncertaintyInMeters",
+    na_action = "NA as NA")
+```
+
+```{r uncertainty from meter to radian degrees NA as NA, echo=FALSE}
+L_wiedii_uncertainty_naNA <-
+  meters_to_decdeg(occs_df = Leopardus_wiedii_gbif,
     distance = "coordinateUncertaintyInMeters",
     na_action = "NA as NA")
 
-head(Leopardus_wiedii_uncertainty_naNA)
+knitr::kable(head(L_wiedii_uncertainty_naNA))
 ```
 
-```{r uncertainty from meter to radian degrees NA as mean}
-Leopardus_wiedii_uncertainty_naMean <-
-  meters_to_decdeg(Leopardus_wiedii_gbif,
+3. *NA as mean*, assigns the non-NA uncertainty mean value to NA values.
+```
+L_wiedii_uncertainty_naMean <-
+  meters_to_decdeg(occs_df = Leopardus_wiedii_gbif,
+    distance = "coordinateUncertaintyInMeters",
+    na_action = "NA as mean")
+```
+
+```{r uncertainty from meter to radian degrees NA as mean, echo=FALSE}
+L_wiedii_uncertainty_naMean <-
+  meters_to_decdeg(occs_df = Leopardus_wiedii_gbif,
     distance = "coordinateUncertaintyInMeters",
     na_action = "NA as mean")
 
-head(Leopardus_wiedii_uncertainty_naMean)
-
+knitr::kable(head(L_wiedii_uncertainty_naMean))
 ```
 
-The rest of the vignette will use the na_action = "NA as mean"
+***Note*: The rest of this vignette will use the conditional na_action = "NA as mean"
 
-# 5. generate_occ_uncertain function
+# 3. `generate_occ_uncertain` function
 
-The function **generate_occ_uncertain** uses uncertain values to generate random occurrence latitude and longitude coordinates. The function requires to have a data.frame with at least four columns in decimal degrees:
-1. Latitude in decimal degrees.
-2. Longitude in decimal degrees.
-3. Latitude uncertainty in decimal degrees.
-4. Longitude uncertainty in decimal degrees.
+The function `generate_occ_uncertain` produces a data frame of random latitude and longitude coordinates for the species occurrences with uncertain values in decimal degrees. The function requires to have an input data.frame with at least four columns in decimal degrees:
 
-```{r NA as mean}
-#combine orginl dataset with radian 
-Leopardus_wiedii_uncertainty_naMean <-
-  cbind(Leopardus_wiedii_gbif, Leopardus_wiedii_uncertainty_naMean)
+1. Latitude.
+2. Longitude.
+3. Latitude uncertainty.
+4. Longitude uncertainty.
+
+```{r NA as mean, echo=FALSE}
+#combine observed and prodataset with radian 
+L_wiedii_uncertainty_naMean <-
+  cbind(Leopardus_wiedii_gbif, L_wiedii_uncertainty_naMean)
+
+knitr::kable(head(L_wiedii_uncertainty_naMean))
 ```
-
-Lets generate random occurrence latitude and longitude coordinates with uncertain values. 
-```{r generate}
-Leopardus_wiedii_random <-
+```
+L_wiedii_random <-
   generate_occ_uncertain(
-    Leopardus_wiedii_uncertainty_naMean,
+    L_wiedii_uncertainty_naMean,
+    lat_col = "latitude",
+    lon_col = "longitude",
+    lat_uncertainty = "lat_uncertainty",
+    lon_uncertainty = "lon_uncertainty",
+    taxa_col = "species"
+  )
+```  
+```{r generate, echo=FALSE}
+L_wiedii_random <-
+  generate_occ_uncertain(
+    L_wiedii_uncertainty_naMean,
     lat_col = "latitude",
     lon_col = "longitude",
     lat_uncertainty = "lat_uncertainty",
@@ -107,39 +150,71 @@ Leopardus_wiedii_random <-
     taxa_col = "species"
   )
 
-head(Leopardus_wiedii_random)
+knitr::kable(head(L_wiedii_random))
 ```
 
 ## Lets visualize 
-```{r eval=FALSE, include=FALSE}
-plot(Leopardus_wiedii$longitude, Leopardus_wiedii$latitude)
+```{r echo=FALSE, fig.width = 7, fig.height= 7 }
+#observed occurrences
+plot(Leopardus_wiedii_gbif$longitude, Leopardus_wiedii_gbif$latitude, pch = 19, col = "black", xlab = "Longitude", ylab = "Latitude", 
+  main = "L. wiedii observed and generated occurrence points"
+  )
+#generated occurences
 points(
-  Leopardus_wiedii_random$lon_random,
-  Leopardus_wiedii_random$lat_random,
+  L_wiedii_random$lon_random,
+  L_wiedii_random$lat_random,
   col = "red",
   pch = 21
 )
+#add legend
+legend(
+  "bottomleft",
+  legend = c("NA as mean generated occurrences", "observed occurrences"),
+  col = c("red", "black"),
+  pch = c(21, 19),
+  cex = 0.8
+)
 ```
-----
 
-# 6. Using the random occurences in land metrics with ConR
+# 4. `random_geo_range` function
+The function `random_geo_range` accounts for uncertainty and uses a for loop to randomize occurence points. Produces a data frame with values for extent of occurrence (EOO)and area of occupancy (AOO), with ConR package functions (compute.EOO and compute.AOO). The function requires an input data frame with three different columns in order:
 
-## 6.1 Input file 
-
-Is is required a data frame with at least three different columns: 
-
-```{r file}
-head(Leopardus_wiedii_random)
-```
 1. lat_random: Latitude in decimal degrees
 2. lon_random: Longitude in decimal degrees
 3. Name of taxa
 
-## 6.2. Computing EOO 
-The Extent of Occurrence (EOO) is the area contained within the shortest continuous imaginary boundary which can be drawn to encompass all the known, inferred or projected sites of present occurrence of a taxon, excluding cases of vagrancy. (IUCN 2012)
+```
+L_weidii_random_geo_range <- random_geo_range(
+  n_length = 10,
+  occs_df = L_wiedii_uncertainty_naMean,
+  lat_col = "latitude",
+  lon_col = "longitude",
+  lon_uncertainty = "lon_uncertainty",
+  lat_uncertainty = "lat_uncertainty",
+  taxa_col = "species"
+)
+```
 
-You may want to exclude areas that are not suitable for your species when computing EOO. This is feasible using the logical argument exclude.area which will crop areas defined by the shapefile you provide with the argument country_map. Note that it is mandatory to provide a shapefile for country_map if exclude.area is TRUE. 
-```{r EOO}
+```{r file, echo=FALSE}
+library(ConR)
+L_weidii_random_geo_range <- random_geo_range(
+  n_length = 10,
+  occs_df = L_wiedii_uncertainty_naMean,
+  lat_col = "latitude",
+  lon_col = "longitude",
+  lon_uncertainty = "lon_uncertainty",
+  lat_uncertainty = "lat_uncertainty",
+  taxa_col = "species"
+)
+
+head(L_weidii_random_geo_range)
+```
+## 5 Computing from observed dataset with ConR 
+>The Extent of Occurrence is the area contained within the shortest continuous imaginary boundary which can be drawn to encompass all the known, inferred or projected sites of present occurrence of a taxon, excluding cases of vagrancy. (IUCN 2012)
+
+The function logical argument exclude.area, crops areas not suitable for the species. The excluded areas are defined by a shapefile with the argument country_map. Note that it is mandatory to provide a shapefile for country_map if exclude.area is TRUE. 
+```{r EOO, echo=FALSE}
+library(ConR)
 L_weidii_EOO <-
   EOO.computing(
     Leopardus_wiedii_random,
@@ -149,20 +224,13 @@ L_weidii_EOO <-
   )
 ```
 
-## 6.3 Computing AOO 
-Area of occupancy (AOO), is the area occupied by a taxon within its extent of occurrence. The measure reflects the fact that a taxon will not usually occur throughout the area of its extent of occurrence, which may contain unsuitable or unoccupied habitats. Metric calculatlaed as the area of all known or predicted cells for the species. The resolution will be 2x2km as required by IUCN.
-```{r AOO}
+>The area occupied by a taxon within its extent of occurrence; known as Area of occupancy (AOO), reflects the fact that a taxon will not usually occur throughout the area of its extent of occurrence. Metric calculatlaed as the area of all known or predicted cells for the species, without unsuitable or unoccupied habitats. The resolution will be 2x2km as required by IUCN.
+
+```{r AOO, echo=FALSE}
 L_weidii_AOO <- AOO.computing(Leopardus_wiedii_random)
 ```
 
 ## 6.4 Runing IUCN.eval function 
-```{r IUCN}
-IUCN.eval(Leopardus_wiedii_random)
-```
-
-# 7 Next steps
-The function {*random_geo_range*} Use a for loop to repeat the randomizing points, then calculates EOO and AOO. Save each EOO and AOO result.
-
-```{r}
-Leopardus_weidii_random_geo_range <- random_geo_range(10, Leopardus_wiedii_uncertainty_naMean)
+```{r IUCN, echo=FALSE}
+L_weidii_IUCN.eval <- IUCN.eval(Leopardus_wiedii_random)
 ```
